# weather-personal-assistant

./: .gitignore  README.md  calendar.json  pyproject.toml  requirements.txt
docs/: rules.md
specs/: PRD.md
src/weather_assistant/: __init__.py  __main__.py  assistant.py  calendar_store.py  cli.py  models.py  rules_engine.py  weather_client.py
tests/: conftest.py  stubs.py  test_assistant.py  test_calendar_store.py  test_rules_engine.py  test_weather_client.py
